# pmc

./: .gitignore  CMakeLists.txt
cmake/: CMakeLists.txt  libunistd.CMakeLists.txt  libunistd.CMakeLists.txt.in
include/pmc/: pmc_graph.h  pmc_heu.h  pmc_input.h  pmc_maxclique.h  pmc_utils.h  pmc_vertex.h  pmcx_maxclique.h  pmcx_maxclique_basic.h
pmc/: CMakeLists.txt
pmc/include/pmc/: pmc_graph.h  pmc_heu.h  pmc_input.h  pmc_maxclique.h
pmc/src/: pmc_graph.cpp
